Project

General

Profile

Actions

Bug #56561

closed

rbd perf image iostat/iotop lost the ability to gather data across pools

Added by Ilya Dryomov almost 2 years ago. Updated over 1 year ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
octopus,pacific,quincy
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

"... I typically keep a background screen running `rbd perf image iostat` that shows all of the rbd devices with io, and how busy that disk may be at any given moment. Recently after upgrading everything to latest octopus release (15.2.16), it no longer allows for not specifying the pool, which then means I can’t blend all rbd pools together into a single view."

How it used to appear with 15.2.13:

$ rbd perf image iostat
> NAME                                WR    RD    WR_BYTES    RD_BYTES      WR_LAT    RD_LAT
> rbd-ssd/app1                     322/s   0/s   5.6 MiB/s       0 B/s     2.28 ms   0.00 ns
> rbd-ssd/app2                     223/s   5/s   2.1 MiB/s   147 KiB/s     3.56 ms   1.12 ms
> rbd-hybrid/app3                   76/s   0/s    11 MiB/s       0 B/s    16.61 ms   0.00 ns
> rbd-hybrid/app4                   11/s   0/s   395 KiB/s       0 B/s    51.29 ms   0.00 ns
> rbd-hybrid/app5                    3/s   0/s    74 KiB/s       0 B/s   151.54 ms   0.00 ns
> rbd-hybrid/app6                    0/s   0/s    42 KiB/s       0 B/s    13.90 ms   0.00 ns
> rbd-hybrid/app7                    0/s   0/s   2.4 KiB/s       0 B/s     1.70 ms   0.00 ns
>
> NAME                                WR    RD    WR_BYTES   RD_BYTES     WR_LAT      RD_LAT
> rbd-ssd/app1                     483/s   0/s   7.3 MiB/s      0 B/s    2.17 ms     0.00 ns
> rbd-ssd/app2                     279/s   5/s   2.5 MiB/s   69 KiB/s    3.82 ms   516.30 us
> rbd-hybrid/app3                  147/s   0/s    10 MiB/s      0 B/s    8.59 ms     0.00 ns
> rbd-hybrid/app6                   10/s   0/s   425 KiB/s      0 B/s   75.79 ms     0.00 ns
> rbd-hybrid/app8                    0/s   0/s   2.4 KiB/s      0 B/s    1.85 ms     0.00 ns

Now, with 15.2.16:

$ rbd perf image iostat
rbd: mgr command failed: (2) No such file or directory: [errno 2] RADOS object not found (Pool 'rbd' not found)

"I do not have a pool named `rbd` so that is correct ... Setting a pool name to one of my rbd pools either as pool-spec or -p/—pool works, but obviously only for that pool, and not for all rbd pools, as it functioned previously, in what appears to have been 15.2.13 previously."

https://lists.ceph.io/hyperkitty/list/ceph-users@ceph.io/thread/LIQYPOYTNZ3JWP4MYNG67BR54I4TVQHB/


Related issues 4 (0 open4 closed)

Related to rbd - Bug #46754: RBD string-based config options are ignoredResolvedJason Dillaman

Actions
Copied to rbd - Backport #56595: octopus: rbd perf image iostat/iotop lost the ability to gather data across poolsResolvedIlya DryomovActions
Copied to rbd - Backport #56596: quincy: rbd perf image iostat/iotop lost the ability to gather data across poolsResolvedIlya DryomovActions
Copied to rbd - Backport #56597: pacific: rbd perf image iostat/iotop lost the ability to gather data across poolsResolvedIlya DryomovActions
Actions #1

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from New to In Progress
  • Assignee set to Ilya Dryomov
  • Priority changed from Normal to Urgent
  • Backport set to octopus,pacific,quincy
  • Regression changed from No to Yes

This is a regression caused by https://github.com/ceph/ceph/commit/96f05a7956b3d554e06330c6bb5743a6329d1c44 which was backported to 15.2.14.

Actions #2

Updated by Ilya Dryomov almost 2 years ago

  • Related to Bug #46754: RBD string-based config options are ignored added
Actions #3

Updated by Kai Stian Olstad almost 2 years ago

I tested the same command on 16.2.6, an got the same error message.

Actions #4

Updated by Ilya Dryomov almost 2 years ago

Kai Stian Olstad wrote:

I tested the same command on 16.2.6, an got the same error message.

Right -- 15.2.14+, all 16.2.x and all 17.2.x releases are affected.

Actions #5

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 47106
Actions #6

Updated by Ilya Dryomov almost 2 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #7

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #56595: octopus: rbd perf image iostat/iotop lost the ability to gather data across pools added
Actions #8

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #56596: quincy: rbd perf image iostat/iotop lost the ability to gather data across pools added
Actions #9

Updated by Backport Bot almost 2 years ago

  • Copied to Backport #56597: pacific: rbd perf image iostat/iotop lost the ability to gather data across pools added
Actions #10

Updated by Backport Bot over 1 year ago

  • Tags set to backport_processed
Actions #11

Updated by Igor Fedotov over 1 year ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF